--- a/docker-img-0/Dockerfile
+++ b/docker-img-0/Dockerfile
@@ -150,6 +150,10 @@ RUN git clone https://github.com/aws/aws-elastic-beanstalk-cli-setup.git; \
 
 ENV PATH /root/.ebcli-virtual-env/executables:$PATH
 
+# GCP
+
+RUN  echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] http://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg  add - && apt-get update -y && apt-get install google-cloud-cli  google-cloud-cli-app-engine-python google-cloud-cli-app-engine-python-extras -y
+
 
 
 
